# halo2-dynamic-sha256

./: Cargo.toml  rust-toolchain
benches/: digest.rs
src/: circuit.rs  compression.rs  gate.rs  lib.rs  sha256.rs  spread.rs  table16.rs  utils.rs
