[package]
name = "halo2-dynamic-sha256"
version = "0.1.0"
edition = "2018"
authors = ["Sora Suegami"]
description = "SHA256 verification circuit in halo2 supporting dynamic length input."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0-ce", default-features = false, features = [
    "halo2-pse",
    "display",
] }
log = "0.4"
generic-array = { version = "0.14.6", features = ["more_lengths"] }

# rand_xorshift = "0.3"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = { version = "0.10.6", features = ["compress"] }
hex = "0.4.3"
itertools = "0.11"
serde_json = "1.0"

clap_builder = "=4.2.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "digest"
harness = false
